Inmob-Salesforce/force-app/main/default/objects/Account/fields/CCI_TotalOpportunities__c.field-meta.xml
<CustomField>
    <fullName>CCI_TotalOpportunities__c</fullName>
    <description>campo de resumen que cuenta el total de oportunidades que tiene disponibles el cliente en etapas abiertas.</description>
    <label>Total Oportunidades</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Probable, Negociando</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>