Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Act_Econ__c.field-meta.xml
<CustomField>
    <fullName>CI_Act_Econ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actividad Económica</label>
    <referenceTo>Actividad_Economica__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>