Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Act_Indep__c.field-meta.xml
<CustomField>
    <fullName>CI_Act_Indep__c</fullName>
    <label>Actividad Independiente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>