Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Afil_Anios__c.field-meta.xml
<CustomField>
    <fullName>CI_Afil_Anios__c</fullName>
    <label>Afiliación Años</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>