Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Afil_CCG__c.field-meta.xml
<CustomField>
    <fullName>CI_Afil_CCG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afiliación a CCG.</label>
    <type>Checkbox</type>
</CustomField>