Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Afil_Meses__c.field-meta.xml
<CustomField>
    <fullName>CI_Afil_Meses__c</fullName>
    <label>Afiliación Meses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>