Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Afiliado_IESS__c.field-meta.xml
<CustomField>
    <fullName>CI_Afiliado_IESS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afiliado IESS</label>
    <type>Checkbox</type>
</CustomField>