Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Alimentacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Alimentacion__c</fullName>
    <label>Alimentación / Servicios básicos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>