Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Anti_Anios_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Anti_Anios_C__c</fullName>
    <label>Antig. Años Cónyuge</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>