Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Antig_Act_Anios__c.field-meta.xml
<CustomField>
    <fullName>CI_Antig_Act_Anios__c</fullName>
    <label>Antig. en Actividad Años</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>