Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Antig_MEA__c.field-meta.xml
<CustomField>
    <fullName>CI_Antig_MEA__c</fullName>
    <label>Antig. Meses Empresa Anterior</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>