Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Antig_Meses_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Antig_Meses_C__c</fullName>
    <label>Antig. Meses Cónyuge</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>