Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Apellidos_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Apellidos_C__c</fullName>
    <label>Apellidos del Cónyuge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>