Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Arriendo__c.field-meta.xml
<CustomField>
    <fullName>CI_Arriendo__c</fullName>
    <label>Arriendo o Hipotecario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>