Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Cargo_Conyuge__c.field-meta.xml
<CustomField>
    <fullName>CI_Cargo_Conyuge__c</fullName>
    <label>Cargo Cónyuge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>