Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Cargo_PEP__c.field-meta.xml
<CustomField>
    <fullName>CI_Cargo_PEP__c</fullName>
    <label>Cargo PEP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>