Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Celular__c.field-meta.xml
<CustomField>
    <fullName>CI_Celular__c</fullName>
    <label>Celular</label>
    <type>Phone</type>
</CustomField>