Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>CI_Ciudad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CI_Pais__c</field>
            <operation>equals</operation>
            <valueField>Ciudad__c.CI_Pais__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Ciudad__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>