Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Ciudad_domicilio__c.field-meta.xml
<CustomField>
    <fullName>CI_Ciudad_domicilio__c</fullName>
    <label>Ciudad de domicilio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>