Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Convertido_desde_Lead__c.field-meta.xml
<CustomField>
    <fullName>CI_Convertido_desde_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convertido desde Lead</label>
    <type>Checkbox</type>
</CustomField>