Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Convertido_Lead__c.field-meta.xml
<CustomField>
    <fullName>CI_Convertido_Lead__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>Cuenta convertida desde el Lead.</description>
    <inlineHelpText>Cuenta convertida desde el Lead.</inlineHelpText>
    <label>Convertido desde Lead</label>
    <length>5</length>
    <type>Text</type>
</CustomField>