Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Cupo__c.field-meta.xml
<CustomField>
    <fullName>CI_Cupo__c</fullName>
    <label>Cupo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>