Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Desc_OG__c.field-meta.xml
<CustomField>
    <fullName>CI_Desc_OG__c</fullName>
    <label>Descripción Otros Gastos</label>
    <length>200</length>
    <type>Text</type>
</CustomField>