Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Descuento_IESS__c.field-meta.xml
<CustomField>
    <fullName>CI_Descuento_IESS__c</fullName>
    <label>Prestamos IFIS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>