Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Dias_creacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Dias_creacion__c</fullName>
    <formula>(DATEVALUE(LastModifiedDate) - CI_Fecha_Lead__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días de creación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>