Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Dir_Email_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Dir_Email_C__c</fullName>
    <label>Dirección Email Cónyuge</label>
    <type>Email</type>
</CustomField>