Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Dir_ext1__c.field-meta.xml
<CustomField>
    <fullName>CI_Dir_ext1__c</fullName>
    <label>Dirección en el exterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>