Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Dir_extC__c.field-meta.xml
<CustomField>
    <fullName>CI_Dir_extC__c</fullName>
    <label>Dirección en el exterior Cónyuge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>