Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Direccion_Trabajo_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Direccion_Trabajo_C__c</fullName>
    <label>Dirección Trabajo Cónyuge</label>
    <type>TextArea</type>
</CustomField>