Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Email_Gestor__c.field-meta.xml
<CustomField>
    <fullName>CI_Email_Gestor__c</fullName>
    <label>Email Gestor</label>
    <type>Email</type>
</CustomField>