Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Emisor__c.field-meta.xml
<CustomField>
    <fullName>CI_Emisor__c</fullName>
    <label>Emisor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>