Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Empresa_Anterior__c.field-meta.xml
<CustomField>
    <fullName>CI_Empresa_Anterior__c</fullName>
    <label>Empresa Anterior</label>
    <length>100</length>
    <type>Text</type>
</CustomField>