Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Envio_Corresp__c.field-meta.xml
<CustomField>
    <fullName>CI_Envio_Corresp__c</fullName>
    <label>Envió / Corresp.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Domicilio</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Trabajo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>