Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Estado_cuenta__c.field-meta.xml
<CustomField>
    <fullName>CI_Estado_cuenta__c</fullName>
    <label>Estado de cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dado de Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>