Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Ext_Tel_E__c.field-meta.xml
<CustomField>
    <fullName>CI_Ext_Tel_E__c</fullName>
    <label>Extensión Teléfono Empresa</label>
    <length>5</length>
    <type>Text</type>
</CustomField>