Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Ext_Trab_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Ext_Trab_C__c</fullName>
    <label>Extensión Trabajo Cónyuge</label>
    <length>5</length>
    <type>Text</type>
</CustomField>