Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Fecha_Const__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_Const__c</fullName>
    <label>Fecha Const.</label>
    <type>Date</type>
</CustomField>