Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Fecha_Fin__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_Fin__c</fullName>
    <label>Fecha Fin PEP</label>
    <type>Date</type>
</CustomField>