Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Fecha_Lead__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_Lead__c</fullName>
    <label>Fecha de creación del prospecto</label>
    <type>Date</type>
</CustomField>