Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Fecha_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_Nacimiento__c</fullName>
    <label>Fecha de Nacimiento</label>
    <type>Date</type>
</CustomField>