Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Fecha_Nacimiento_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_Nacimiento_C__c</fullName>
    <label>Fecha Nacimiento Conyuge</label>
    <type>Date</type>
</CustomField>