Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Id_Gestor__c.field-meta.xml
<CustomField>
    <fullName>CI_Id_Gestor__c</fullName>
    <formula>Owner.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Gestor</label>
    <type>Text</type>
</CustomField>