Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Institucion__c.field-meta.xml
<CustomField>
    <fullName>CI_Institucion__c</fullName>
    <label>Institución PEP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>