Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Lugar_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>CI_Lugar_Nacimiento__c</fullName>
    <label>Lugar de Nacimiento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>