Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Medio_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CI_Medio_Contacto__c</fullName>
    <label>Medio de Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CELULAR</fullName>
            </value>
            <value>
                <fullName>TELÉFONO</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>WHATSAPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>