Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_N_Afil_CCG__c.field-meta.xml
<CustomField>
    <fullName>CI_N_Afil_CCG__c</fullName>
    <label>N° Afiliación a CCG.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>