Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_N_Cargas__c.field-meta.xml
<CustomField>
    <fullName>CI_N_Cargas__c</fullName>
    <label>N° Cargas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>