Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Natu_Neg_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Natu_Neg_C__c</fullName>
    <label>Naturaleza del Negocio del Cónyuge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>