Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Natur_Negocio__c.field-meta.xml
<CustomField>
    <fullName>CI_Natur_Negocio__c</fullName>
    <label>Naturaleza del Negocio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>