Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Nivel_Educacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Nivel_Educacion__c</fullName>
    <label>Nivel de Educación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>MEDIA</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>SUPERIOR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>