Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Nombre_Banco2__c.field-meta.xml
<CustomField>
    <fullName>CI_Nombre_Banco2__c</fullName>
    <label>Nombre del Banco</label>
    <length>100</length>
    <type>Text</type>
</CustomField>