Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Notificar_PPI__c.field-meta.xml
<CustomField>
    <fullName>CI_Notificar_PPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificar Prospecto Potencial Inactivo</label>
    <type>Checkbox</type>
</CustomField>