Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Num_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CI_Num_Cuenta__c</fullName>
    <label>Número de Cuenta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>