Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Observacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Observacion__c</fullName>
    <label>Observación</label>
    <type>TextArea</type>
</CustomField>