Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Observacion_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Observacion_C__c</fullName>
    <label>Observación Cónyuge</label>
    <type>TextArea</type>
</CustomField>