Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Origen__c.field-meta.xml
<CustomField>
    <fullName>CI_Origen__c</fullName>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OBRA</fullName>
            </value>
            <value>
                <fullName>OFICINA</fullName>
            </value>
            <value>
                <fullName>FERIA BIESS</fullName>
            </value>
            <value>
                <fullName>FERIA HABITAT</fullName>
            </value>
            <value>
                <fullName>ACTIVACION</fullName>
            </value>
            <value>
                <fullName>PROPERATI</fullName>
            </value>
            <value>
                <fullName>REFERIDOS</fullName>
            </value>
            <value>
                <fullName>WHATSAPP</fullName>
            </value>
            <value>
                <fullName>FORMULARIO FACEBOOK</fullName>
            </value>
            <value>
                <fullName>FORMULARIO INSTAGRAM</fullName>
            </value>
            <value>
                <fullName>TIKTOK</fullName>
            </value>
            <value>
                <fullName>FORMULARIO META</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>VALLAS Y LETREROS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>