Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Origen_OIC__c.field-meta.xml
<CustomField>
    <fullName>CI_Origen_OIC__c</fullName>
    <label>Origen Otros Ingresos Cónyuge</label>
    <length>200</length>
    <type>Text</type>
</CustomField>