Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Origen_OIS__c.field-meta.xml
<CustomField>
    <fullName>CI_Origen_OIS__c</fullName>
    <label>Origen Otros Ingresos del Solicitante</label>
    <length>200</length>
    <type>Text</type>
</CustomField>