Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Otros_Ing_Sol__c.field-meta.xml
<CustomField>
    <fullName>CI_Otros_Ing_Sol__c</fullName>
    <label>Otros Ingresos Solicitante</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>