Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Pago_Mensual__c.field-meta.xml
<CustomField>
    <fullName>CI_Pago_Mensual__c</fullName>
    <label>Pago Mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>