Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Pais__c.field-meta.xml
<CustomField>
    <fullName>CI_Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>