Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Pais_Act__c.field-meta.xml
<CustomField>
    <fullName>CI_Pais_Act__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País Act. Eco.</label>
    <referenceTo>Pais_UAF__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>