Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Profesion__c.field-meta.xml
<CustomField>
    <fullName>CI_Profesion__c</fullName>
    <label>Profesión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AB</fullName>
                <label>ABOGADO</label>
            </value>
            <value>
                <fullName>ADM</fullName>
                <label>ADMINISTRADOR</label>
            </value>
            <value>
                <fullName>AN</fullName>
                <label>ANALISTA</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>ARQUITECTO</label>
            </value>
            <value>
                <fullName>ARQ</fullName>
                <label>ARQUITECTA</label>
            </value>
            <value>
                <fullName>AUDI</fullName>
                <label>AUDITOR</label>
            </value>
            <value>
                <fullName>CHOF</fullName>
                <label>CHOFER</label>
            </value>
            <value>
                <fullName>COM</fullName>
                <label>COMERCIANTE</label>
            </value>
            <value>
                <fullName>CONS</fullName>
                <label>CONSTRUCTOR</label>
            </value>
            <value>
                <fullName>CONT</fullName>
                <label>CONTADOR</label>
            </value>
            <value>
                <fullName>DISE</fullName>
                <label>DISEÑADOR</label>
            </value>
            <value>
                <fullName>DL</fullName>
                <label>DOCTOR EN LEYES</label>
            </value>
            <value>
                <fullName>DM</fullName>
                <label>DOCTOR EN MEDICINA</label>
            </value>
            <value>
                <fullName>DR</fullName>
                <label>ODONTÓLOGO</label>
            </value>
            <value>
                <fullName>DRA</fullName>
                <label>DOCTORA</label>
            </value>
            <value>
                <fullName>DRQ</fullName>
                <label>DOCTOR</label>
            </value>
            <value>
                <fullName>EC</fullName>
                <label>ECONOMISTA</label>
            </value>
            <value>
                <fullName>EJE</fullName>
                <label>EJECUTIVA</label>
            </value>
            <value>
                <fullName>EMP</fullName>
                <label>EMPLEADO</label>
            </value>
            <value>
                <fullName>ENF</fullName>
                <label>ENFERMERO</label>
            </value>
            <value>
                <fullName>ESTU</fullName>
                <label>ESTUDIANTE</label>
            </value>
            <value>
                <fullName>FARM</fullName>
                <label>FARMACÉUTICO</label>
            </value>
            <value>
                <fullName>GEOL</fullName>
                <label>GEÓLOGO</label>
            </value>
            <value>
                <fullName>ING</fullName>
                <label>INGENIERO</label>
            </value>
            <value>
                <fullName>LCDO</fullName>
                <label>LICENCIADO</label>
            </value>
            <value>
                <fullName>LCDA</fullName>
                <label>LICENCIADA</label>
            </value>
            <value>
                <fullName>MARI</fullName>
                <label>MARINO</label>
            </value>
            <value>
                <fullName>MDCO</fullName>
                <label>MÉDICO</label>
            </value>
            <value>
                <fullName>MECA</fullName>
                <label>MECÁNICO</label>
            </value>
            <value>
                <fullName>MIL</fullName>
                <label>MILITAR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>