Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Reassignment_date_time__c.field-meta.xml
<CustomField>
    <fullName>CI_Reassignment_date_time__c</fullName>
    <description>Fecha hora en que se reasigna la cuenta.</description>
    <inlineHelpText>Fecha hora en que se reasigna la cuenta.</inlineHelpText>
    <label>Fecha/Hora de reasignación</label>
    <type>DateTime</type>
</CustomField>