Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Res_ext_C__c.field-meta.xml
<CustomField>
    <fullName>CI_Res_ext_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reside en el exterior Cónyuge</label>
    <type>Checkbox</type>
</CustomField>