Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_Reside_ext1__c.field-meta.xml
<CustomField>
    <fullName>CI_Reside_ext1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reside en el exterior</label>
    <type>Checkbox</type>
</CustomField>