Inmob-Salesforce/force-app/main/default/objects/Account/fields/CI_ResidenciaC__c.field-meta.xml
<CustomField>
    <fullName>CI_ResidenciaC__c</fullName>
    <label>Residencia Cónyuge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Ilegal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>